Fixed Spacing consistency

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 .submitButton {
+    margin-left: 10px;
     padding-left: 24px;
     padding-right: 24px;
     border-radius: 20px;
@@ -66,6 +67,7 @@ body {
 .topText{
     color: white;
     margin: 10px;
+    padding-top: 4px;
 }
 @keyframes spin {
     0% {
